pixel alignment fix

--- a/public/css/my-diary.css
+++ b/public/css/my-diary.css
@@ -212,7 +212,7 @@ td, th {
     color: #ffffff;
     position: absolute;
     left: 3px;
-    top: 3px;
+    top: 2px;
     z-index: -1;
 }
 
@@ -241,7 +241,7 @@ td, th {
     color: #ffffff;
     position: absolute;
     left: 3px;
-    top: 3px;
+    top: 2px;
     z-index: -1;
 }
 
@@ -270,7 +270,7 @@ td, th {
     color: #ffffff;
     position: absolute;
     left: 3px;
-    top: 3px;
+    top: 2px;
     z-index: -1;
 }
 
